2008-01-20  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/waf.py: fixed copy/pasting error.

2008-01-20  Frederic Peters  <fpeters@0d.be>

	* modulesets/moduleset.xsl: updated moduleset stylesheet to modern
	standards and new moduleset elements.

2008-01-20  Frederic Peters  <fpeters@0d.be>

	* modulesets/moduleset.dtd: fixed DTD as comments are not allowed in
	attribute list.

2008-01-20  Marko Anastasov  <marko.anastasov@gmail.com>

	* modulesets/gnome-2.22.modules: Added gtkmm-documentation.

2008-01-20  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/autotools.py: added possibility to run make clean or
	make distclean on failures in configure or build states.
	(closes: #119086)

2008-01-20  Frederic Peters  <fpeters@0d.be>

	* modulesets/bootstrap.modules,
	patches/python-2.4.4-fix-unicode-module-loading.patch: added patch to
	Python as it doesn't build on Gutsy (at least), patch by Marc-Andre
	Lureau (closes: #510812).

2008-01-20  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.20.modules,
	modulesets/gnome-external-deps-2.20.modules,
	modulesets/gnome-external-deps-2.22.modules,
	modulesets/gnome-suites-2.22.modules,
	modulesets/gnome-2.22.modules: added Mono binding in external deps, as
	required for tomboy; also added a bunch of Mono stuff to gnome-2.22.
	(closes: #324056)

2008-01-20  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/__init__.py: abort on dependency node missing a
	package attribute.

2008-01-20  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/base.py, jhbuild/defaults.jhbuildrc,
	jhbuild/config.py, jhbuild/modtypes/__init__.py: removed force_policy
	configure option; force build_policy to 'all' when --force-policy is
	passed to build or buildone options.

2008-01-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* modulesets/gnome-2.22.modules: added ghex dependency for nemiver

2008-01-19  Frederic Peters  <fpeters@0d.be>

	* modulesets/bootstrap.modules: added gmp to bootstrap module, as it is