@@ -1,3 +1,8 @@
+2008-01-21  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/modtypes/waf.py, tests/tests.py: added checks for waf module
+	type.
+
 2008-01-20  Frederic Peters  <fpeters@0d.be>
 
 	* jhbuild/modtypes/waf.py: fixed copy/pasting error.
